[package]
name = "box-crypt"
version = "0.3.2"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"
obfstr = { version = "*", git = "https://github.com/SesameOne-Software/obfstr.git" }
const-fnv1a-hash = "1.1.0"
# obfstr = { version = "*", git = "https://github.com/SesameOne-Software/obfstr.git" }
